--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -49,16 +49,18 @@ a {
 
 .cl-sidemenu {
   .menu-item {
-    font-weight: 700;
     font-size: 16px;
     color: #fff;
-    padding: 7px 15px;
+    &.home {
+        padding: 10px 25px 10px 10px;
+    }
     &:hover {
       background: #32384a;
     }
   }
   .icon {
     margin-right: 8px;
+    transition: all ease-in-out .4s;
   }
   .accordion-item,
   .accordion-button {
@@ -66,19 +68,23 @@ a {
     color: #fff;
     border: none;
     box-shadow: none;
-    font-weight: 600;
+    font-size: 14px;
 
     a {
       color: #fff;
-      // font-weight: normal;
-      // font-size: 14px;
+      font-weight: normal;
+      font-size: 12px;
       padding: 5px 10px 5px 30px;
+      transition: all ease-in-out .4s;
+      &:hover {
+        padding-left: 35px;
+      }
     }
     .accordion-button {
-      padding: 5px 15px 5px 0;
+      padding: 10px 25px 10px 10px;
       position: relative;
       &:hover {
-        background: #32384a;
+        background: #556ee6;
       }
       &:focus {
         box-shadow: none;
@@ -93,7 +99,7 @@ a {
         content: "\f107";
         font-family: "FontAwesome";
         position: absolute;
-        right: 0;
+        right: 12px;
       }
     }
   }
@@ -119,7 +125,7 @@ a {
       }
       .accordion-button {
         display: block;
-        padding: 5px 0;
+        // padding: 5px 0;
         text-align: center;
         .icon {
           text-align: center;
@@ -143,6 +149,15 @@ a {
     }
   }
 }
+.accordion-button:not(.collapsed) {
+    color: #ffffff;
+    background-color: #556ee6;
+    box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+    .icon {
+        transform: rotate(-45deg);
+    }
+}
+
 @media only screen and (max-width: 991px) {
   .widget-area.leftsidebar {
     left: -300px;
@@ -155,12 +170,4 @@ a {
       left: 0;
     }
   }
-}
-
-
-
-.accordion-button:not(.collapsed) {
-    color: #ffffff;
-    background-color: #556ee6;
-    box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
 }
